--- a/index.html
+++ b/index.html
@@ -16,21 +16,16 @@
       --panel: rgba(18, 20, 26, .62);
       --panel-2: rgba(18, 20, 26, .78);
       --stroke: rgba(255, 255, 255, .10);
-      --stroke-2: rgba(255, 255, 255, .14);
       --text: rgba(255,255,255,.90);
       --muted: rgba(255,255,255,.62);
       --muted2: rgba(255,255,255,.42);
 
       --gold: #d6b56a;
       --gold2: #f0de9a;
-      --goldDark: rgba(214, 181, 106, .25);
       --shadow: 0 20px 60px rgba(0,0,0,.55);
       --shadow2: 0 10px 30px rgba(0,0,0,.45);
 
       --radius: 18px;
-      --radius2: 14px;
-      --pad: 16px;
-      --pad2: 12px;
     }
 
     * { box-sizing: border-box; }
@@ -43,12 +38,12 @@
       overflow-x: hidden;
     }
 
-    /* Background image + overlays */
+    /* ✅ фон через ./assets/bg.png */
     body::before{
       content:"";
       position: fixed;
       inset: 0;
-      background: url("assets/bg.png") center/cover no-repeat;
+      background: url("./assets/bg.png") center/cover no-repeat;
       filter: saturate(1.05) contrast(1.05);
       transform: scale(1.03);
       z-index: -3;
@@ -122,7 +117,7 @@
       max-width: 520px;
     }
 
-    /* Controls panel */
+    /* Controls */
     .controls{
       margin-top: 14px;
       padding: 12px 16px;
@@ -138,7 +133,6 @@
       gap: 14px;
       flex-wrap: wrap;
     }
-
     .left-controls{
       display:flex;
       align-items:center;
@@ -151,20 +145,17 @@
       gap: 10px;
       flex-wrap: wrap;
     }
-
     .label{
       font-size: 12px;
       color: var(--muted);
       letter-spacing: .02em;
     }
-
     .status{
       font-size: 12px;
       color: var(--muted2);
       margin-left: 8px;
     }
 
-    /* Premium buttons */
     .btn{
       appearance: none;
       border: 1px solid rgba(214,181,106,.42);
@@ -184,12 +175,7 @@
       background: linear-gradient(to bottom, rgba(240,222,154,.24), rgba(214,181,106,.12));
       box-shadow: 0 12px 26px rgba(0,0,0,.45);
     }
-    .btn:active{
-      transform: translateY(0);
-      box-shadow: 0 7px 16px rgba(0,0,0,.35);
-    }
 
-    /* Select */
     select{
       appearance: none;
       border: 1px solid rgba(255,255,255,.14);
@@ -218,7 +204,7 @@
       transform: translateY(1px);
     }
 
-    /* Table panel */
+    /* Panel + tables */
     .panel{
       margin-top: 14px;
       border-radius: var(--radius);
@@ -247,10 +233,12 @@
     .panel-hint{
       font-size: 12px;
       color: var(--muted);
+      text-align: right;
     }
 
     .wide-wrap { overflow-x: auto; }
     table{ width: 100%; border-collapse: collapse; }
+
     thead th{
       position: sticky;
       top: 0;
@@ -265,22 +253,23 @@
       padding: 12px 12px;
       border-bottom: 1px solid rgba(255,255,255,.12);
       white-space: nowrap;
+      text-align: center;
     }
     tbody td{
       padding: 12px 12px;
       border-bottom: 1px solid rgba(255,255,255,.08);
       color: rgba(255,255,255,.86);
       white-space: nowrap;
+      text-align: center;
     }
     tbody tr{
-      transition: background .14s ease, transform .14s ease;
+      transition: background .14s ease;
       cursor: pointer;
     }
     tbody tr:hover{
       background: rgba(255,255,255,.06);
     }
 
-    /* Place highlighting */
     tbody tr[data-place="1"]{
       background: linear-gradient(to right, rgba(214,181,106,.18), rgba(214,181,106,.04));
     }
@@ -289,11 +278,6 @@
     }
     tbody tr[data-place="3"]{
       background: linear-gradient(to right, rgba(214,181,106,.10), rgba(214,181,106,.02));
-    }
-    tbody tr[data-place="1"]:hover,
-    tbody tr[data-place="2"]:hover,
-    tbody tr[data-place="3"]:hover{
-      background: rgba(214,181,106,.18);
     }
 
     .place-badge{
@@ -308,6 +292,7 @@
       background: rgba(0,0,0,.25);
       color: rgba(255,255,255,.92);
       font-weight: 700;
+      margin: 0 auto;
     }
     tr[data-place="1"] .place-badge{
       border-color: rgba(240,222,154,.65);
@@ -324,14 +309,12 @@
       background: rgba(214,181,106,.12);
     }
 
-    /* Compact table only in portrait */
     #leaderboardWideWrap { display: block; }
     #leaderboardCompact { display: none; }
 
     @media (max-width: 760px) and (orientation: portrait) {
       .brand img{ height: 40px; }
       .season-name{ text-align: left; }
-      .controls{ gap: 10px; }
       #leaderboardWideWrap { display: none; }
       #leaderboardCompact { display: table; }
     }
@@ -371,16 +354,8 @@
       border-radius: 12px;
       padding: 8px 10px;
       cursor:pointer;
-      transition: transform .12s ease, background .18s ease, border-color .18s ease;
     }
-    .close:hover{
-      transform: translateY(-1px);
-      background: rgba(214,181,106,.12);
-      border-color: rgba(214,181,106,.35);
-    }
-    .modal-body{
-      padding: 16px;
-    }
+    .modal-body{ padding: 16px; }
 
     .profile-grid{
       display:grid;
@@ -390,7 +365,6 @@
     @media (max-width: 860px){
       .profile-grid{ grid-template-columns: 1fr; }
     }
-
     .box{
       background: rgba(0,0,0,.20);
       border: 1px solid rgba(255,255,255,.10);
@@ -407,22 +381,7 @@
     }
     .kv p{ margin: 7px 0; color: rgba(255,255,255,.86); }
     .kv b{ color: rgba(240,222,154,.92); font-weight: 700; }
-
-    .mini table{ margin-top: 8px; }
-    .mini th{
-      color: rgba(240,222,154,.88);
-      font-size: 12px;
-      text-transform: uppercase;
-      letter-spacing: .04em;
-      border-bottom: 1px solid rgba(255,255,255,.10);
-      padding: 10px 10px;
-      background: rgba(0,0,0,.25);
-    }
-    .mini td{
-      border-bottom: 1px solid rgba(255,255,255,.08);
-      padding: 10px 10px;
-      color: rgba(255,255,255,.86);
-    }
+    .mini th, .mini td{ text-align:center; }
 
     .hint{ color: var(--muted2); font-size: 12px; margin-top: 10px; }
   </style>
@@ -430,10 +389,10 @@
 
 <body>
   <div class="wrap">
-
     <div class="topbar">
       <div class="brand">
-        <img src="assets/logo.png" alt="River Poker Club">
+        <!-- ✅ лого через ./assets/logo.png -->
+        <img src="./assets/logo.png" alt="River Poker Club">
         <div class="brand-text">
           <div class="brand-title">River Rating</div>
           <div class="brand-sub">Турнирные таблицы • Покерный клуб</div>
@@ -465,14 +424,13 @@
       </div>
 
       <div class="wide-wrap" id="leaderboardWideWrap">
-        <table class="wide-table" id="leaderboardWide"></table>
+        <table id="leaderboardWide"></table>
       </div>
 
       <table id="leaderboardCompact"></table>
     </div>
   </div>
 
-  <!-- Modal -->
   <div class="modal" id="modal">
     <div class="card">
       <div class="modal-head">
@@ -518,7 +476,6 @@
   function normUp(x) { return norm(x).toUpperCase(); }
 
   function parseDate(v) {
-    if (v instanceof Date) return v;
     const s = norm(v);
     const d = new Date(s);
     if (!isNaN(d.getTime())) return d;
@@ -565,7 +522,6 @@
 
     prevBtn.onclick = async () => {
       const current = normUp(seasonSelect.value);
-
       if (current === "TOTAL") {
         if (!seasonsCache.length) return;
         const last = normUp(seasonsCache[seasonsCache.length - 1].season_id);
@@ -577,7 +533,6 @@
         setStatus("");
         return;
       }
-
       const idx = seasonsCache.findIndex(s => normUp(s.season_id) === current);
       if (idx > 0) {
         const prev = normUp(seasonsCache[idx - 1].season_id);
@@ -592,7 +547,6 @@
 
     nextBtn.onclick = async () => {
       const current = normUp(seasonSelect.value);
-
       if (current === "TOTAL") {
         if (!seasonsCache.length) return;
         const first = normUp(seasonsCache[0].season_id);
@@ -604,7 +558,6 @@
         setStatus("");
         return;
       }
-
       const idx = seasonsCache.findIndex(s => normUp(s.season_id) === current);
       if (idx >= 0 && idx < seasonsCache.length - 1) {
         const next = normUp(seasonsCache[idx + 1].season_id);
@@ -656,7 +609,7 @@
   }
 
   function buildDateColumns(matchesFiltered) {
-    const map = new Map(); // ymd -> {ts,label}
+    const map = new Map();
     for (const m of matchesFiltered) {
       const d = parseDate(m.date);
       if (!d) continue;
@@ -666,12 +619,12 @@
       if (!map.has(key) || ts > map.get(key).ts) map.set(key, { ts, label });
     }
     return [...map.entries()]
-      .sort((a, b) => b[1].ts - a[1].ts)  // новые слева
+      .sort((a, b) => b[1].ts - a[1].ts)
       .map(([key, v]) => ({ key, label: v.label, ts: v.ts }));
   }
 
   function buildPointsMatrix(matchesFiltered) {
-    const matrix = new Map(); // pid -> Map(ymd -> sum)
+    const matrix = new Map();
     for (const m of matchesFiltered) {
       const d = parseDate(m.date);
       if (!d) continue;
@@ -706,9 +659,9 @@
     const matches = normalizeMatches(rawMatches);
     const matchesFiltered = filterMatchesByMode(matches, seasonId);
 
-    const dateCols = buildDateColumns(matchesFiltered);           // wide
+    const dateCols = buildDateColumns(matchesFiltered);
     const matrix   = buildPointsMatrix(matchesFiltered);
-    const last3Dates = buildLast3GlobalDates(matchesFiltered);    // compact header
+    const last3Dates = buildLast3GlobalDates(matchesFiltered);
 
     rows.sort((a, b) => {
       const pa = Number(a.place);
@@ -719,7 +672,6 @@
       return sb - sa;
     });
 
-    // WIDE
     const headWide = `<thead><tr>
       <th>Место</th><th>Игрок</th><th>Очки сезона</th><th>Total</th>
       ${dateCols.map(d => `<th>${d.label}</th>`).join("")}
@@ -745,7 +697,6 @@
 
     tableWideEl.innerHTML = headWide + bodyWide;
 
-    // COMPACT (portrait)
     const d1 = last3Dates[0]?.label || "—";
     const d2 = last3Dates[1]?.label || "—";
     const d3 = last3Dates[2]?.label || "—";
