--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
       --text: rgba(255,255,255,.90);
       --muted: rgba(255,255,255,.62);
       --muted2: rgba(255,255,255,.42);
-
       --gold: #d6b56a;
       --gold2: #f0de9a;
       --shadow: 0 20px 60px rgba(0,0,0,.55);
       --shadow2: 0 10px 30px rgba(0,0,0,.45);
-
       --radius: 18px;
     }
 
@@ -38,7 +36,7 @@
       overflow-x: hidden;
     }
 
-    /* ✅ фон через ./assets/bg.png */
+    /* Background image + overlays */
     body::before{
       content:"";
       position: fixed;
@@ -66,9 +64,9 @@
 
     /* Header */
     .topbar{
-      display: flex;
+      display: grid;
+      grid-template-columns: 1fr auto 1fr; /* left / center / right */
       align-items: center;
-      justify-content: space-between;
       gap: 14px;
       padding: 14px 16px;
       border-radius: var(--radius);
@@ -77,11 +75,13 @@
       box-shadow: var(--shadow2);
       backdrop-filter: blur(10px);
     }
+
     .brand{
       display:flex;
       align-items:center;
       gap: 12px;
       min-width: 240px;
+      justify-content: flex-start;
     }
     .brand img{
       height: 44px;
@@ -89,24 +89,22 @@
       display:block;
       filter: drop-shadow(0 10px 18px rgba(0,0,0,.55));
     }
-    .brand-text{
-      display:flex;
-      flex-direction: column;
-      line-height: 1.1;
+
+    /* ✅ Centered title */
+    .center-title{
+      text-align: center;
+      line-height: 1;
     }
-    .brand-title{
+    .center-title .title{
       font-family: Cinzel, serif;
       font-weight: 700;
-      letter-spacing: .06em;
-      font-size: 16px;
+      letter-spacing: .10em;
+      font-size: 22px;            /* bigger */
       text-transform: uppercase;
-      color: rgba(255,255,255,.92);
+      color: rgba(255,255,255,.94);
+      text-shadow: 0 18px 40px rgba(0,0,0,.6);
     }
-    .brand-sub{
-      margin-top: 4px;
-      font-size: 12px;
-      color: var(--muted);
-    }
+
     .season-name{
       font-family: Cinzel, serif;
       font-weight: 600;
@@ -114,10 +112,11 @@
       font-size: 14px;
       color: rgba(240,222,154,.92);
       text-align: right;
+      justify-self: end;
       max-width: 520px;
     }
 
-    /* Controls */
+    /* Controls panel */
     .controls{
       margin-top: 14px;
       padding: 12px 16px;
@@ -133,6 +132,7 @@
       gap: 14px;
       flex-wrap: wrap;
     }
+
     .left-controls{
       display:flex;
       align-items:center;
@@ -145,6 +145,7 @@
       gap: 10px;
       flex-wrap: wrap;
     }
+
     .label{
       font-size: 12px;
       color: var(--muted);
@@ -156,6 +157,7 @@
       margin-left: 8px;
     }
 
+    /* Premium buttons */
     .btn{
       appearance: none;
       border: 1px solid rgba(214,181,106,.42);
@@ -176,6 +178,7 @@
       box-shadow: 0 12px 26px rgba(0,0,0,.45);
     }
 
+    /* Select */
     select{
       appearance: none;
       border: 1px solid rgba(255,255,255,.14);
@@ -204,7 +207,7 @@
       transform: translateY(1px);
     }
 
-    /* Panel + tables */
+    /* Table panel */
     .panel{
       margin-top: 14px;
       border-radius: var(--radius);
@@ -238,7 +241,6 @@
 
     .wide-wrap { overflow-x: auto; }
     table{ width: 100%; border-collapse: collapse; }
-
     thead th{
       position: sticky;
       top: 0;
@@ -309,12 +311,24 @@
       background: rgba(214,181,106,.12);
     }
 
+    /* Layout switch */
     #leaderboardWideWrap { display: block; }
     #leaderboardCompact { display: none; }
 
+    /* ✅ Portrait mobile: show compact WITHOUT last 3 dates */
     @media (max-width: 760px) and (orientation: portrait) {
-      .brand img{ height: 40px; }
-      .season-name{ text-align: left; }
+      .topbar{
+        grid-template-columns: auto 1fr;
+        grid-template-areas:
+          "brand season"
+          "title title";
+        row-gap: 10px;
+      }
+      .brand{ grid-area: brand; min-width: 0; }
+      .season-name{ grid-area: season; }
+      .center-title{ grid-area: title; text-align: left; }
+      .center-title .title{ font-size: 18px; letter-spacing: .08em; }
+
       #leaderboardWideWrap { display: none; }
       #leaderboardCompact { display: table; }
     }
@@ -389,14 +403,14 @@
 
 <body>
   <div class="wrap">
+
     <div class="topbar">
       <div class="brand">
-        <!-- ✅ лого через ./assets/logo.png -->
         <img src="./assets/logo.png" alt="River Poker Club">
-        <div class="brand-text">
-          <div class="brand-title">River Rating</div>
-          <div class="brand-sub">Турнирные таблицы • Покерный клуб</div>
-        </div>
+      </div>
+
+      <div class="center-title">
+        <div class="title">RIVER RATING</div>
       </div>
 
       <div class="season-name" id="seasonName">—</div>
@@ -637,11 +651,6 @@
     return matrix;
   }
 
-  function buildLast3GlobalDates(matchesFiltered) {
-    const cols = buildDateColumns(matchesFiltered);
-    return cols.slice(0, 3);
-  }
-
   async function renderAll() {
     await renderLeaderboard();
   }
@@ -661,7 +670,6 @@
 
     const dateCols = buildDateColumns(matchesFiltered);
     const matrix   = buildPointsMatrix(matchesFiltered);
-    const last3Dates = buildLast3GlobalDates(matchesFiltered);
 
     rows.sort((a, b) => {
       const pa = Number(a.place);
@@ -672,6 +680,7 @@
       return sb - sa;
     });
 
+    // WIDE (landscape / desktop)
     const headWide = `<thead><tr>
       <th>Место</th><th>Игрок</th><th>Очки сезона</th><th>Total</th>
       ${dateCols.map(d => `<th>${d.label}</th>`).join("")}
@@ -697,36 +706,18 @@
 
     tableWideEl.innerHTML = headWide + bodyWide;
 
-    const d1 = last3Dates[0]?.label || "—";
-    const d2 = last3Dates[1]?.label || "—";
-    const d3 = last3Dates[2]?.label || "—";
-
-    const k1 = last3Dates[0]?.key || null;
-    const k2 = last3Dates[1]?.key || null;
-    const k3 = last3Dates[2]?.key || null;
-
+    // COMPACT (portrait): ONLY место/игрок/сезон/total (без 3 дат)
     const headCompact = `<thead><tr>
       <th>Место</th><th>Игрок</th><th>Сезон</th><th>Total</th>
-      <th>${d1}</th><th>${d2}</th><th>${d3}</th>
     </tr></thead>`;
 
     const bodyCompact = `<tbody>` + rows.map(r => {
-      const pid = String(r.player_id);
-      const mp = matrix.get(pid);
-
-      const v1 = (k1 && mp) ? (mp.get(k1) || 0) : 0;
-      const v2 = (k2 && mp) ? (mp.get(k2) || 0) : 0;
-      const v3 = (k3 && mp) ? (mp.get(k3) || 0) : 0;
-
       const place = String(r.place ?? "");
-      return `<tr data-player="${pid}" data-place="${place}">
+      return `<tr data-player="${String(r.player_id)}" data-place="${place}">
         <td><span class="place-badge">${place}</span></td>
         <td>${r.name ?? ""}</td>
         <td>${r.season_score ?? ""}</td>
         <td>${r.all_seasons_score ?? ""}</td>
-        <td>${v1 ? v1 : "—"}</td>
-        <td>${v2 ? v2 : "—"}</td>
-        <td>${v3 ? v3 : "—"}</td>
       </tr>`;
     }).join("") + `</tbody>`;
 
