--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       margin: 22px auto 40px;
     }
 
-    /* Header (desktop/landscape) */
+    /* Header */
     .topbar{
       display: grid;
-      grid-template-columns: 1fr auto 1fr; /* left / center / right */
+      grid-template-columns: 1fr auto 1fr;
       align-items: center;
       gap: 14px;
       padding: 14px 16px;
@@ -242,7 +242,7 @@
       text-align: right;
     }
 
-    /* ✅ Horizontal scroll for wide table */
+    /* ✅ Horizontal scroll always (desktop + phone portrait too) */
     .wide-wrap{
       overflow-x: auto;
       -webkit-overflow-scrolling: touch;
@@ -317,11 +317,7 @@
       margin: 0 auto;
     }
 
-    /* Layout switch */
-    #leaderboardWideWrap { display: block; }
-    #leaderboardCompact { display: none; }
-
-    /* ✅ Portrait: season centered + compact table without dates */
+    /* Portrait: header stacks, BUT table stays wide + scrollable */
     @media (max-width: 760px) and (orientation: portrait) {
       .topbar{
         display: flex;
@@ -335,20 +331,15 @@
         justify-content: center;
       }
       .brand img{ height: 42px; }
-
       .season-name{
         text-align: center;
         justify-self: unset;
         max-width: 92vw;
       }
-
       .center-title .title{
         font-size: 18px;
         letter-spacing: .08em;
       }
-
-      #leaderboardWideWrap { display: none; }
-      #leaderboardCompact { display: table; }
     }
 
     /* Modal */
@@ -414,23 +405,19 @@
     .kv p{ margin: 7px 0; color: rgba(255,255,255,.86); }
     .kv b{ color: rgba(240,222,154,.92); font-weight: 700; }
     .mini th, .mini td{ text-align:center; }
-
     .hint{ color: var(--muted2); font-size: 12px; margin-top: 10px; }
   </style>
 </head>
 
 <body>
   <div class="wrap">
-
     <div class="topbar">
       <div class="brand">
         <img src="./assets/logo.png" alt="River Poker Club">
       </div>
-
       <div class="center-title">
         <div class="title">RIVER RATING</div>
       </div>
-
       <div class="season-name" id="seasonName">—</div>
     </div>
 
@@ -458,8 +445,6 @@
       <div class="wide-wrap" id="leaderboardWideWrap">
         <table id="leaderboardWide"></table>
       </div>
-
-      <table id="leaderboardCompact"></table>
     </div>
   </div>
 
@@ -477,12 +462,7 @@
   </div>
 
 <script>
-  const SHEET_ID = "1Pj2H4dT3f0W7rmWQPPgj1_FHbCPSIDsRmO56I-VmZls";
   const PROFILE_API_BASE = "https://script.google.com/macros/s/AKfycbwKd6_brG1Pgy3U3AUX_cNCUoznk2nYzIOYKo790MDs48ktJwlKvdQ_P8TNXqvPJsGkTQ/exec";
-
-  const LEADERBOARD_URL = `https://opensheet.elk.sh/${SHEET_ID}/Leaderboard`;
-  const SEASONS_URL     = `https://opensheet.elk.sh/${SHEET_ID}/Seasons`;
-  const MATCHES_URL     = `https://opensheet.elk.sh/${SHEET_ID}/Matches`;
 
   const statusEl       = document.getElementById("status");
   const seasonSelect   = document.getElementById("seasonSelect");
@@ -491,7 +471,6 @@
   const seasonNameEl   = document.getElementById("seasonName");
 
   const tableWideEl    = document.getElementById("leaderboardWide");
-  const tableCompactEl = document.getElementById("leaderboardCompact");
 
   const modalEl   = document.getElementById("modal");
   const profileEl = document.getElementById("profile");
@@ -501,7 +480,7 @@
   modalEl.onclick = (e) => { if (e.target === modalEl) modalEl.style.display = "none"; };
 
   let seasonsCache = [];
-  let matchesCache = null;
+  const dashCache = new Map(); // seasonId -> {leaderboard, matches}
 
   function setStatus(t) { statusEl.textContent = t; }
   function norm(x) { return String(x ?? "").trim(); }
@@ -521,7 +500,7 @@
   function dateKeyFromCell(v){
     const dm = parseDdMm(v);
     if (!dm) return null;
-    return `${pad2(dm.mm)}-${pad2(dm.dd)}`; // sort by month then day
+    return `${pad2(dm.mm)}-${pad2(dm.dd)}`;
   }
   function dateLabelFromCell(v){
     const dm = parseDdMm(v);
@@ -529,19 +508,28 @@
     return `${pad2(dm.dd)}.${pad2(dm.mm)}`;
   }
 
+  function toNum(v){
+    const s = String(v ?? "").trim().replace(/\s+/g, "").replace(",", ".");
+    const n = Number(s);
+    return Number.isFinite(n) ? n : 0;
+  }
+
   async function getCurrentSeasonFromApi() {
-    const res = await fetch(PROFILE_API_BASE);
+    const res = await fetch(PROFILE_API_BASE, { cache: "no-store" });
     const data = await res.json();
     return normUp(data.current_season_id || "");
   }
   async function setSeason(seasonId) {
-    await fetch(`${PROFILE_API_BASE}?season_id=${encodeURIComponent(seasonId)}`);
+    // важный вызов, который записывает G2/B2 в таблице (как у тебя уже сделано)
+    await fetch(`${PROFILE_API_BASE}?season_id=${encodeURIComponent(seasonId)}`, { cache: "no-store" });
   }
 
   async function loadSeasons() {
     setStatus("Загрузка сезонов…");
-    const res = await fetch(SEASONS_URL);
-    seasonsCache = await res.json();
+    // ✅ Берём сезоны из Apps Script (единый источник, одинаково на телефоне и ПК)
+    const res = await fetch(`${PROFILE_API_BASE}?mode=meta`, { cache: "no-store" });
+    const data = await res.json();
+    seasonsCache = Array.isArray(data.seasons) ? data.seasons : [];
 
     seasonSelect.innerHTML =
       `<option value="TOTAL">Total</option>` +
@@ -552,7 +540,7 @@
       setStatus("Переключаю сезон…");
       await setSeason(seasonId);
       updateSeasonName();
-      await renderAll();
+      await renderLeaderboard();
       setStatus("");
     };
 
@@ -565,7 +553,7 @@
         setStatus("Переключаю сезон…");
         await setSeason(last);
         updateSeasonName();
-        await renderAll();
+        await renderLeaderboard();
         setStatus("");
         return;
       }
@@ -576,7 +564,7 @@
         setStatus("Переключаю сезон…");
         await setSeason(prev);
         updateSeasonName();
-        await renderAll();
+        await renderLeaderboard();
         setStatus("");
       }
     };
@@ -590,7 +578,7 @@
         setStatus("Переключаю сезон…");
         await setSeason(first);
         updateSeasonName();
-        await renderAll();
+        await renderLeaderboard();
         setStatus("");
         return;
       }
@@ -601,7 +589,7 @@
         setStatus("Переключаю сезон…");
         await setSeason(next);
         updateSeasonName();
-        await renderAll();
+        await renderLeaderboard();
         setStatus("");
       }
     };
@@ -617,20 +605,29 @@
     seasonNameEl.textContent = s ? s.season_name : "—";
   }
 
-  async function loadMatchesOnce() {
-    if (matchesCache) return matchesCache;
-    setStatus("Загрузка матчей…");
-    const res = await fetch(MATCHES_URL);
-    matchesCache = await res.json();
-    return matchesCache;
-  }
+  async function loadDashboard(seasonId){
+    const sid = normUp(seasonId);
+    if (dashCache.has(sid)) return dashCache.get(sid);
 
-  function getField(row, keys) {
-    for (const k of keys) if (row[k] !== undefined) return row[k];
-    return undefined;
+    setStatus("Загрузка данных…");
+    const url = `${PROFILE_API_BASE}?mode=dashboard&season_id=${encodeURIComponent(sid)}`;
+    const res = await fetch(url, { cache: "no-store" });
+    const data = await res.json();
+
+    const out = {
+      leaderboard: Array.isArray(data.leaderboard) ? data.leaderboard : [],
+      matches: Array.isArray(data.matches) ? data.matches : []
+    };
+    dashCache.set(sid, out);
+    return out;
   }
 
   function normalizeMatches(rows) {
+    // dashboard отдаёт нормальные ключи, но оставим совместимость
+    const getField = (r, keys) => {
+      for (const k of keys) if (r && r[k] !== undefined) return r[k];
+      return undefined;
+    };
     return rows.map(r => ({
       date: getField(r, ["date", "Date", "A"]),
       season: getField(r, ["season", "season_id", "Season", "B"]),
@@ -652,70 +649,106 @@
       const label = dateLabelFromCell(m.date);
       if (!map.has(key)) map.set(key, { key, label });
     }
-    return [...map.values()].sort((a,b) => (a.key < b.key ? 1 : -1)); // newest right-to-left
+    // newest on the left (как у тебя было)
+    return [...map.values()].sort((a,b) => (a.key < b.key ? 1 : -1));
   }
 
-  function buildPointsMatrix(matchesFiltered) {
+  function buildPointsAndSums(matchesAll, seasonId){
+    const filtered = filterMatchesByMode(matchesAll, seasonId);
+
+    const dateCols = buildDateColumns(filtered);
+
+    // matrix: player -> dateKey -> points
     const matrix = new Map();
-    for (const m of matchesFiltered) {
+    // sums for sort/display
+    const seasonSum = new Map(); // per player, for selected season (or TOTAL)
+    const totalSum  = new Map(); // per player, across all seasons
+
+    // total across ALL matches (even if current season is S01)
+    for (const m of matchesAll) {
+      const pid = String(m.player_id);
+      const add = toNum(m.points);
+      totalSum.set(pid, (totalSum.get(pid) || 0) + add);
+    }
+
+    // season sums + matrix from filtered
+    for (const m of filtered) {
       const dateKey = dateKeyFromCell(m.date);
       if (!dateKey) continue;
 
       const pid = String(m.player_id);
+      const add = toNum(m.points);
+
+      seasonSum.set(pid, (seasonSum.get(pid) || 0) + add);
+
       if (!matrix.has(pid)) matrix.set(pid, new Map());
       const mp = matrix.get(pid);
-
-      const p = Number(m.points);
-      const add = Number.isFinite(p) ? p : 0; // "—" -> 0
       mp.set(dateKey, (mp.get(dateKey) || 0) + add);
     }
-    return matrix;
+
+    // if TOTAL mode: "seasonSum" should equal totalSum for display/sort
+    if (seasonId === "TOTAL") {
+      for (const [pid, v] of totalSum.entries()) seasonSum.set(pid, v);
+    }
+
+    return { dateCols, matrix, seasonSum, totalSum };
   }
 
-  async function renderAll() {
-    await renderLeaderboard();
+  function pick(r, keys){
+    for (const k of keys) if (r && r[k] !== undefined) return r[k];
+    return undefined;
   }
 
   async function renderLeaderboard() {
-    setStatus("Загрузка рейтинга…");
     const seasonId = normUp(seasonSelect.value);
+    const dash = await loadDashboard(seasonId);
 
-    const [lbRes, rawMatches] = await Promise.all([
-      fetch(LEADERBOARD_URL),
-      loadMatchesOnce()
-    ]);
+    // IMPORTANT: matches in dashboard are already filtered by season unless TOTAL (в Apps Script)
+    // но нам нужно totalSum по всем сезонам => если не TOTAL, подгрузим ещё TOTAL для totalSum один раз
+    let allMatchesForTotal = null;
 
-    // --- LOAD + SORT rows BY points (Season / Total) ---
-    const rowsRaw = await lbRes.json();
-    const toNum = (v) => {
-      const s = String(v ?? "").trim().replace(/\s+/g, "").replace(",", ".");
-      const n = Number(s);
-      return Number.isFinite(n) ? n : 0;
-    };
-    const rows = [...rowsRaw].sort((a, b) => {
-      const keyA = (seasonId === "TOTAL") ? toNum(a.all_seasons_score) : toNum(a.season_score);
-      const keyB = (seasonId === "TOTAL") ? toNum(b.all_seasons_score) : toNum(b.season_score);
-      if (keyB !== keyA) return keyB - keyA;
+    const leaderboardRows = dash.leaderboard.map(r => ({
+      player_id: String(pick(r, ["player_id","playerId","A"]) ?? "").trim(),
+      name: pick(r, ["name","B"]) ?? ""
+    })).filter(x => x.player_id);
 
-      const nameA = String(a.name ?? "").trim();
-      const nameB = String(b.name ?? "").trim();
-      return nameA.localeCompare(nameB, "ru", { sensitivity: "base" });
+    // matches for current mode (S01 or TOTAL)
+    const matchesCur = normalizeMatches(dash.matches);
+
+    if (seasonId === "TOTAL") {
+      allMatchesForTotal = matchesCur;
+    } else {
+      // подгружаем TOTAL matches один раз (чтобы Total всегда был правильный на всех устройствах)
+      if (!dashCache.has("TOTAL")) {
+        const dTotal = await loadDashboard("TOTAL");
+        dashCache.set("TOTAL", { leaderboard: dTotal.leaderboard, matches: dTotal.matches });
+      }
+      allMatchesForTotal = normalizeMatches(dashCache.get("TOTAL").matches);
+    }
+
+    // строим матрицу и суммы (и season, и total) из matches, чтобы не было расхождений ПК/телефон
+    const { dateCols, matrix, seasonSum, totalSum } = buildPointsAndSums(allMatchesForTotal, seasonId);
+
+    // сортировка по computed sums
+    const rows = [...leaderboardRows].sort((a, b) => {
+      const aSeason = seasonSum.get(a.player_id) || 0;
+      const bSeason = seasonSum.get(b.player_id) || 0;
+      if (bSeason !== aSeason) return bSeason - aSeason;
+
+      const aTot = totalSum.get(a.player_id) || 0;
+      const bTot = totalSum.get(b.player_id) || 0;
+      if (bTot !== aTot) return bTot - aTot;
+
+      return String(a.name).localeCompare(String(b.name), "ru", { sensitivity: "base" });
     });
 
-    const matches = normalizeMatches(rawMatches);
-    const matchesFiltered = filterMatchesByMode(matches, seasonId);
-
-    const dateCols = buildDateColumns(matchesFiltered);
-    const matrix   = buildPointsMatrix(matchesFiltered);
-
-    // WIDE (desktop/landscape): dates + horizontal scroll
     const headWide = `<thead><tr>
       <th>№</th><th>Игрок</th><th>Очки сезона</th><th>Total</th>
       ${dateCols.map(d => `<th>${d.label}</th>`).join("")}
     </tr></thead>`;
 
     const bodyWide = `<tbody>` + rows.map((r, idx) => {
-      const pid = String(r.player_id);
+      const pid = r.player_id;
       const num = idx + 1;
 
       const rankClass =
@@ -731,41 +764,19 @@
         return `<td>${v ? v : "—"}</td>`;
       }).join("");
 
+      const seasonPts = seasonSum.get(pid) || 0;
+      const totalPts  = totalSum.get(pid) || 0;
+
       return `<tr class="${rankClass} ${zebraClass}" data-player="${pid}">
         <td><span class="place-badge">${num}</span></td>
         <td>${r.name ?? ""}</td>
-        <td>${r.season_score ?? ""}</td>
-        <td>${r.all_seasons_score ?? ""}</td>
+        <td>${seasonPts}</td>
+        <td>${totalPts}</td>
         ${cells}
       </tr>`;
     }).join("") + `</tbody>`;
 
     tableWideEl.innerHTML = headWide + bodyWide;
-
-    // COMPACT (portrait phone): NO dates
-    const headCompact = `<thead><tr>
-      <th>№</th><th>Игрок</th><th>Сезон</th><th>Total</th>
-    </tr></thead>`;
-
-    const bodyCompact = `<tbody>` + rows.map((r, idx) => {
-      const num = idx + 1;
-
-      const rankClass =
-        (num <= 5) ? "rank-gold" :
-        (num <= 10) ? "rank-silver" :
-        "rank-bronze";
-
-      const zebraClass = (num % 2 === 0) ? "zebra-dark" : "";
-
-      return `<tr class="${rankClass} ${zebraClass}" data-player="${String(r.player_id)}">
-        <td><span class="place-badge">${num}</span></td>
-        <td>${r.name ?? ""}</td>
-        <td>${r.season_score ?? ""}</td>
-        <td>${r.all_seasons_score ?? ""}</td>
-      </tr>`;
-    }).join("") + `</tbody>`;
-
-    tableCompactEl.innerHTML = headCompact + bodyCompact;
 
     [...document.querySelectorAll("tr[data-player]")].forEach(tr => {
       tr.onclick = () => openProfile(tr.getAttribute("data-player"));
@@ -782,13 +793,23 @@
     return h;
   }
 
+  function sortLastGamesStable(list){
+    const arr = [...(list || [])];
+    arr.sort((a,b) => {
+      const ak = dateKeyFromCell(a.date) || "";
+      const bk = dateKeyFromCell(b.date) || "";
+      return ak < bk ? 1 : ak > bk ? -1 : 0;
+    });
+    return arr;
+  }
+
   async function openProfile(playerId) {
     modalEl.style.display = "block";
     profileEl.textContent = "Загрузка профиля…";
 
     const seasonId = normUp(seasonSelect.value);
     const url = `${PROFILE_API_BASE}?player_id=${encodeURIComponent(playerId)}&season_id=${encodeURIComponent(seasonId)}`;
-    const res = await fetch(url);
+    const res = await fetch(url, { cache: "no-store" });
     const data = await res.json();
 
     const summaryHtml = (data.profile || []).map(row =>
@@ -798,7 +819,8 @@
     const bySeasonRows = (data.by_season || []).map(r => [r.season, r.points]);
     const bySeasonHtml = renderSmallTable(["Сезон", "Очки"], bySeasonRows);
 
-    const lastRows = (data.last_games || []).map(r => [r.date, r.season, r.points]);
+    const lastSorted = sortLastGamesStable(data.last_games || []);
+    const lastRows = lastSorted.map(r => [r.date, r.season, r.points]);
     const lastHtml = renderSmallTable(["Дата", "Сезон", "Очки"], lastRows);
 
     profileEl.innerHTML = `
@@ -834,7 +856,7 @@
       await setSeason(normUp(seasonSelect.value));
       updateSeasonName();
 
-      await renderAll();
+      await renderLeaderboard();
       setStatus("");
     } catch (err) {
       setStatus("Ошибка загрузки. Проверь доступ к таблице и Web App.");
